kubernetes/main/apps/kube-system/cilium/app/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.robsonhome.cloud
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "10.45.0.21"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.robsonhome.cloud"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.robsonhome.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: robsonhome-cloud-tls
  # Not yet supported - https://github.com/cilium/cilium/issues/21926
  # addresses:
  #   - type: IPAddress
  #     value: "192.168.40.21"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-internal
  namespace: infrastructure
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "10.45.0.20"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.robsonhome.cloud"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.robsonhome.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: robsonhome-cloud-tls
  # Not yet supported - https://github.com/cilium/cilium/issues/21926
  # addresses:
  #   - type: IPAddress
  #     value: "192.168.40.20"
